--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,23 +3,6 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
 @article{einstein1950meaning,
   abbr={AJP},
   bibtex_show={true},
@@ -106,10 +89,10 @@
 
 @book{przibram1967letters,
   bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
+  title={Survival in Chip War: Innovation Portfolio Reconfiguration as Response to Geopolitical Uncertainty},
+  author={Wanfang Hou, Daxuan Shi, Chao Tong and Lele Kang},
+  year={2025},
+  publisher={AOM},
   preview={wave-mechanics.gif},
-  abbr={Vision}
+  abbr={Innovation networks}
 }
