--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -90,7 +90,7 @@
 @book{przibram1967letters,
   bibtex_show={true},
   title={Survival in Chip War: Innovation Portfolio Reconfiguration as Response to Geopolitical Uncertainty},
-  author={Wanfang Hou, Daxuan Shi, Chao Tong and Lele Kang},
+  author={Wanfang, Hou. and Daxuan, Shi. and Chao, Tong. and Lele, Kang.},
   year={2025},
   publisher={AOM},
   preview={wave-mechanics.gif},
