--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -70,29 +70,27 @@
   year={1905}
 }
 
-@Article{einstein1905photoelectriceffect,
+@Article{fusiontopic2025ipm,
   bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+  title={Beyond boundaries: Exploring the interaction between science and technology in fusion knowledge communities},
+  author={Jiajie, Wang. and Wanfang, Hou. and Yue, Li. and Jianjun, Sun. and Lele, Kang.},
+  abstract={Interaction between science and technology (S&T) is a vital mechanism for generating significant innovative breakthroughs. Prior studies have utilized indicators such as semantic similarity or citation analysis to measure the relationships between scientific communities and technological communities represented by papers and patents. However, shifts in innovation paradigms have progressively blurred the boundaries between S&T, leading to the formation of fusion knowledge communities (FKCs) that encompass both scientific and technological knowledge. Therefore, this study proposes a novel approach to exploring the S&T interaction within FKCs. To achieve this, we integrate semantic and citation information by combining BERT and Graph Auto-Encoder algorithms, and employ the Louvain algorithm for FKCs detection. We then conduct a two-step analysis. First, we quantify the strength of S&T interactions over different periods by defining an interaction intensity metric based on the coupling of keywords, and assess the knowledge depth. Second, we analyze the evolution of S&T interactions by measuring knowledge transfer, transmission direction, and degree, which involves computing knowledge similarity between papers and patents and constructing citation networks to highlight key transfer channels over time. We apply this approach to the field of Genetically Engineered Vaccines (GEV), analyzing 1,937 patents and 4,393 papers from 1980 to 2020. The results demonstrate that our method effectively reveals the fusion knowledge community structures between S&T and provides a detailed analysis of interaction patterns and their evolution within FKCs. This study advances the methodology for exploring S&T interactions within FKCs, offering a fine-grained analytical perspective for innovation management research.},
+  html={https://www.sciencedirect.com/science/article/pii/S0306457325000445}
+  journal={Information Processing & Management},
+  volume={62},
+  issue={4},
+  year={2025}
 }
 
-@book{przibram1967letters,
+@Article{sanction2025aom,
   bibtex_show={true},
   title={Survival in Chip War: Innovation Portfolio Reconfiguration as Response to Geopolitical Uncertainty},
   author={Wanfang, Hou. and Daxuan, Shi. and Chao, Tong. and Lele, Kang.},
+  abstract={In the last decade, worldwide geopolitical conflicts are increasingly characterized by a thinking of techno-nationalism, in which the disruptions of cross-border technological flow are weaponized for winning the rivalry. While prior studies have shown that a small size of disruption regarding technological flow can result in disproportionate uncertainty to firm innovation, this study, from an organization resilience perspective, explores how firms reconfigure their innovation portfolio as adaptions to the disruption uncertainty. Based on the scenario of Chinese chip manufacturing industry, we firstly operationalize firm-level disruption uncertainty concept by mapping entity list to a keyword-based technological network. Then, employing a propensity score matching difference-in-difference approach, we find that firms under disruption uncertainty would significantly reconfigure their innovation portfolio—increasing intra-portfolio variety and balance but decreasing (intra-)connectivity; further, these effects would be weakened when firms’ portfolios are highly corresponding to government-sponsored investment portfolio. These findings provide new insights to geopolitics (techno-nationalism), organizational resilience, and innovation portfolio literature.},
   year={2025},
   publisher={AOM},
   preview={wave-mechanics.gif},
+  html={https://journals.aom.org/doi/abs/10.5465/AMPROC.2025.10148abstract}
   selected={true},
   abbr={Innovation networks}
 }
