--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -75,7 +75,7 @@
   title={Beyond boundaries: Exploring the interaction between science and technology in fusion knowledge communities},
   author={Jiajie, Wang. and Wanfang, Hou. and Yue, Li. and Jianjun, Sun. and Lele, Kang.},
   abstract = {Interaction between science and technology (S\&T) is a vital mechanism for generating significant innovative breakthroughs. Prior studies have utilized indicators such as semantic similarity or citation analysis to measure the relationships between scientific communities and technological communities represented by papers and patents. However, shifts in innovation paradigms have progressively blurred the boundaries between S\&T, leading to the formation of fusion knowledge communities (FKCs) that encompass both scientific and technological knowledge. Therefore, this study proposes a novel approach to exploring the S\&T interaction within FKCs. To achieve this, we integrate semantic and citation information by combining BERT and Graph Auto-Encoder algorithms, and employ the Louvain algorithm for FKCs detection. We then conduct a two-step analysis. First, we quantify the strength of S\&T interactions over different periods by defining an interaction intensity metric based on the coupling of keywords, and assess the knowledge depth. Second, we analyze the evolution of S\&T interactions by measuring knowledge transfer, transmission direction, and degree, which involves computing knowledge similarity between papers and patents and constructing citation networks to highlight key transfer channels over time. We apply this approach to the field of Genetically Engineered Vaccines (GEV), analyzing 1,937 patents and 4,393 papers from 1980 to 2020. The results demonstrate that our method effectively reveals the fusion knowledge community structures between S\&T and provides a detailed analysis of interaction patterns and their evolution within FKCs. This study advances the methodology for exploring S\&T interactions within FKCs, offering a fine-grained analytical perspective for innovation management research.},
-  html={https://www.sciencedirect.com/science/article/pii/S0306457325000445}
+  html={https://www.sciencedirect.com/science/article/pii/S0306457325000445},
   journal={Information Processing \& Management},
   volume={62},
   issue={4},
